// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processWeek 골든 스냅샷 > 시상식 주간(50주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "winter",
      "kpopNews": [
        {
          "detail": "연말 무대 완성도와 업계 평판이 직접적인 변수로 작동한다.",
          "headline": "MMA/MAMA/골든디스크 시상식 일정 확정",
          "id": "news-w50-0",
          "type": "event",
          "week": 50,
        },
      ],
      "marketTrend": {
        "coldGenre": "trot",
        "coldMood": "retro",
        "hotGenre": "dancePop",
        "hotMood": "refreshing",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [
        {
          "activeWeeks": 0,
          "agency": "빅오션 뮤직",
          "debutYear": 1,
          "duration": 2,
          "fandom": 5382,
          "gender": "female",
          "global": 2202,
          "id": "event-rival-mega_rookie-w50",
          "industry": 56,
          "intensity": 81,
          "name": "에클라",
          "public": 65,
          "stats": {
            "dance": 77,
            "marketing": 75,
            "visual": 74,
            "vocal": 75,
          },
          "strengths": [
            "완성형 데뷔",
            "대형 마케팅",
            "초기 화제성",
          ],
          "triggerType": "mega_rookie",
          "type": "traditional",
          "weaknesses": [
            "초기 버블 이후 피로도",
          ],
        },
      ],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 2,
      "industry": 26,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 50,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 50,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "winter",
      "currentWeek": 51,
      "currentYear": 1,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "investorComplianceCount": 0,
      "investorConditionProgress": {
        "summit-quarterly": {
          "firstFailedWeek": 50,
          "penaltyApplied": false,
        },
      },
      "investorConditions": [
        {
          "deadlineWeeks": 13,
          "description": "분기마다 수익 보고서 제출 및 흑자 전환 경향 증명",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": "분기 보고 흑자 전환 추세",
        },
        {
          "deadlineWeeks": 104,
          "description": "2년 안에 초기 투자금 회수 수준의 누적 성과 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": "2년 내 투자금 회수",
        },
      ],
      "investorPenaltyActive": true,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "notifications": [
        {
          "id": "noti-w50-0",
          "message": "🏆 MMA 신인상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-1",
          "message": "🏆 MMA 인기상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-2",
          "message": "🏆 MAMA 신인상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-3",
          "message": "🏆 MAMA 인기상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-4",
          "message": "🏆 골든디스크 신인상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-5",
          "message": "🏆 골든디스크 인기상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-6",
          "message": "이벤트 경쟁 그룹 등장: 에클라",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-7",
          "message": "투자사 조건 미달: 분기마다 수익 보고서 제출 및 흑자 전환 경향 증명 — 4주 안에 회복하지 못하면 페널티가 적용됩니다.",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
      ],
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [
        {
          "category": "위기",
          "id": "emergency-investor",
          "options": [
            {
              "description": "투자사 요구에 따라 상업 활동을 늘린다.",
              "effects": {
                "fandomDisappointment": 5,
                "money": 20000000,
                "satisfaction": -4,
                "stress": 5,
              },
              "id": "comply",
              "label": "요구 수용",
              "tradeoff": "투자사 관계는 회복되지만 팬 실망과 피로가 누적된다.",
            },
            {
              "description": "기한 연장이나 조건 완화를 설득한다.",
              "effects": {
                "industry": -2,
                "satisfaction": 2,
              },
              "id": "negotiate",
              "label": "협상 시도",
              "tradeoff": "성공 시 여유가 생기지만 실패 시 관계가 악화된다.",
            },
            {
              "description": "음악적 방향성을 우선하고 투자사와 마찰을 감수한다.",
              "effects": {
                "fandomLoyalty": 3,
                "industry": -3,
                "money": -15000000,
                "satisfaction": 5,
              },
              "id": "defy",
              "label": "자체 방침 고수",
              "tradeoff": "팀 만족도는 오르지만 투자 지원이 줄어들 수 있다.",
            },
          ],
          "summary": "투자사가 실적 미달을 이유로 개입하려 한다.",
          "title": "투자사 조건 압박",
        },
        {
          "category": "재정",
          "id": "budget-allocation",
          "options": [
            {
              "description": "타이틀곡 후보 풀의 경쟁력을 높인다.",
              "effects": {
                "albumSong": 8,
                "money": -25000000,
              },
              "id": "song",
              "label": "데모 곡 추가 투자",
              "tradeoff": "자금 여유가 즉시 줄어든다.",
            },
            {
              "description": "컴백 전 대중 인지도를 미리 끌어올린다.",
              "effects": {
                "albumSong": -2,
                "money": -18000000,
                "public": 4,
              },
              "id": "marketing",
              "label": "SNS 광고 집행",
              "tradeoff": "곡 완성도와 예비 자금이 희생된다.",
            },
            {
              "description": "운영 안정성과 미래 유연성을 지킨다.",
              "effects": {
                "albumMarketing": -2,
                "money": 0,
                "public": -1,
              },
              "id": "reserve",
              "label": "예비비 확보",
              "tradeoff": "이번 주 성장 모멘텀이 멈춘다.",
            },
          ],
          "summary": "자금 여유가 없다. 하나를 밀면 다른 쪽이 비어진다.",
          "title": "예산 배분",
        },
        {
          "category": "콘셉트",
          "id": "seasonal-concept",
          "options": [
            {
              "description": "코어 팬덤에게 안정감을 준다.",
              "effects": {
                "fandomLoyalty": 4,
                "public": -1,
              },
              "id": "safe",
              "label": "기존 노선 유지",
              "tradeoff": "대중의 신선함은 제한된다.",
            },
            {
              "description": "새로운 정체성으로 자연스럽게 넘어간다.",
              "effects": {
                "fandomLoyalty": 2,
                "industry": 1,
                "public": 1,
              },
              "id": "bridge",
              "label": "점진적 전환",
              "tradeoff": "즉각적인 지표 급등은 없다.",
            },
            {
              "description": "급진적인 전환으로 화제성을 노린다.",
              "effects": {
                "fandomDisappointment": 4,
                "industry": -1,
                "public": 5,
              },
              "id": "shock",
              "label": "파격 변신",
              "tradeoff": "콘셉트가 안 먹히면 팬 실망이 커진다.",
            },
          ],
          "seasons": [
            "spring",
            "summer",
            "fall",
            "winter",
          ],
          "summary": "시장이 움직이고 있다. 팬이 다음에 느낄 것을 고른다.",
          "title": "시즌 콘셉트 방향",
        },
      ],
    },
    "staff": {
      "staff": [
        {
          "ability": 60,
          "id": "staff-manager",
          "name": "김매니저",
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 76,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 76,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": [
      {
        "showId": "mma",
        "showName": "MMA",
        "winners": [
          {
            "category": "rookie",
            "isPlayer": true,
            "score": 11.97345289398916,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
          {
            "category": "popularity",
            "isPlayer": true,
            "score": 11.724771401816978,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
        ],
      },
      {
        "showId": "mama",
        "showName": "MAMA",
        "winners": [
          {
            "category": "rookie",
            "isPlayer": true,
            "score": 14.801997069856151,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
          {
            "category": "popularity",
            "isPlayer": true,
            "score": 14.997508455188944,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
        ],
      },
      {
        "showId": "goldenDisk",
        "showName": "골든디스크",
        "winners": [
          {
            "category": "rookie",
            "isPlayer": true,
            "score": 14.585894481660798,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
          {
            "category": "popularity",
            "isPlayer": true,
            "score": 11.636110519440845,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
        ],
      },
    ],
    "competitorComebacks": [],
    "conflicts": [],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "연말 무대 완성도와 업계 평판이 직접적인 변수로 작동한다.",
        "headline": "MMA/MAMA/골든디스크 시상식 일정 확정",
        "id": "news-w50-0",
        "type": "event",
        "week": 50,
      },
    ],
    "promotionResults": [],
    "season": "winter",
    "statChanges": [],
    "warnings": [
      "🏆 MMA 신인상 수상!",
      "🏆 MMA 인기상 수상!",
      "🏆 MAMA 신인상 수상!",
      "🏆 MAMA 인기상 수상!",
      "🏆 골든디스크 신인상 수상!",
      "🏆 골든디스크 인기상 수상!",
      "이벤트 경쟁 그룹 등장: 에클라",
      "투자사 조건 미달: 분기마다 수익 보고서 제출 및 흑자 전환 경향 증명 — 4주 안에 회복하지 못하면 페널티가 적용됩니다.",
    ],
    "week": 50,
  },
}
`;

exports[`processWeek 골든 스냅샷 > 일반 훈련 주간(5주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "spring",
      "kpopNews": [
        {
          "detail": "청량·Y2K 계열이 초봄 차트에서 강한 흐름을 보이고 있다.",
          "headline": "봄 시즌 청량 콘셉트 수요 급증",
          "id": "news-w5-0",
          "type": "trend",
          "week": 5,
        },
      ],
      "marketTrend": {
        "coldGenre": "trot",
        "coldMood": "retro",
        "hotGenre": "dancePop",
        "hotMood": "refreshing",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 2,
      "industry": 20,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 5,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 5,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "spring",
      "currentWeek": 6,
      "currentYear": 1,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "investorComplianceCount": 0,
      "investorConditionProgress": {},
      "investorConditions": [
        {
          "deadlineWeeks": 13,
          "description": "분기마다 수익 보고서 제출 및 흑자 전환 경향 증명",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": "분기 보고 흑자 전환 추세",
        },
        {
          "deadlineWeeks": 104,
          "description": "2년 안에 초기 투자금 회수 수준의 누적 성과 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": "2년 내 투자금 회수",
        },
      ],
      "investorPenaltyActive": false,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "notifications": [],
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [
        {
          "category": "콘셉트",
          "id": "seasonal-concept",
          "options": [
            {
              "description": "코어 팬덤에게 안정감을 준다.",
              "effects": {
                "fandomLoyalty": 4,
                "public": -1,
              },
              "id": "safe",
              "label": "기존 노선 유지",
              "tradeoff": "대중의 신선함은 제한된다.",
            },
            {
              "description": "새로운 정체성으로 자연스럽게 넘어간다.",
              "effects": {
                "fandomLoyalty": 2,
                "industry": 1,
                "public": 1,
              },
              "id": "bridge",
              "label": "점진적 전환",
              "tradeoff": "즉각적인 지표 급등은 없다.",
            },
            {
              "description": "급진적인 전환으로 화제성을 노린다.",
              "effects": {
                "fandomDisappointment": 4,
                "industry": -1,
                "public": 5,
              },
              "id": "shock",
              "label": "파격 변신",
              "tradeoff": "콘셉트가 안 먹히면 팬 실망이 커진다.",
            },
          ],
          "seasons": [
            "spring",
            "summer",
            "fall",
            "winter",
          ],
          "summary": "시장이 움직이고 있다. 팬이 다음에 느낄 것을 고른다.",
          "title": "시즌 콘셉트 방향",
        },
        {
          "category": "스케줄",
          "id": "member-schedule",
          "options": [
            {
              "description": "해당 멤버의 캐릭터성으로 화제성을 노린다.",
              "effects": {
                "chemistry": -2,
                "condition": -1,
                "public": 5,
              },
              "id": "variety",
              "label": "예능 출연",
              "tradeoff": "해당 멤버는 팀 연습에 참여하지 못한다.",
            },
            {
              "description": "그룹 중심으로 팀 리듬을 지킨다.",
              "effects": {
                "chemistry": 4,
                "public": -2,
              },
              "id": "keep-team",
              "label": "팀 연습 유지",
              "tradeoff": "단기 노출 기회를 놓친다.",
            },
            {
              "description": "전문 포지션 역량을 집중 강화한다.",
              "effects": {
                "chemistry": -1,
                "dance": 2,
                "money": -6000000,
                "vocal": 2,
              },
              "id": "solo-lesson",
              "label": "개인 레슨",
              "tradeoff": "나머지 멤버들의 지원이 줄어든다.",
            },
          ],
          "summary": "한 멤버에게 이번 주 높은 노출 기회가 들어왔다.",
          "title": "멤버 개별 스케줄 요청",
        },
        {
          "category": "훈련",
          "id": "training-focus",
          "options": [
            {
              "description": "보컬 실력과 녹음 안정성을 끌어올린다.",
              "effects": {
                "dance": -2,
                "stress": 4,
                "vocal": 5,
              },
              "id": "vocals",
              "label": "보컬 집중 훈련",
              "tradeoff": "스트레스가 오르고 댄스 성장이 느려진다.",
            },
            {
              "description": "무대 포메이션과 팀 호흡을 다진다.",
              "effects": {
                "chemistry": 3,
                "condition": -2,
                "dance": 5,
              },
              "id": "dance",
              "label": "안무 합동 연습",
              "tradeoff": "보컬 체력과 회복 시간이 줄어든다.",
            },
            {
              "description": "컨디션과 번아웃 관리를 우선한다.",
              "effects": {
                "condition": 7,
                "public": -1,
                "stress": -5,
              },
              "id": "rest",
              "label": "컨디션 회복 주간",
              "tradeoff": "실력 성장과 화제성이 모두 느려진다.",
            },
          ],
          "summary": "제한된 연습 에너지를 어디에 집중할지 결정한다.",
          "title": "이번 주 훈련 방향",
        },
      ],
    },
    "staff": {
      "staff": [
        {
          "ability": 60,
          "id": "staff-manager",
          "name": "김매니저",
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": null,
    "competitorComebacks": [],
    "conflicts": [],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "청량·Y2K 계열이 초봄 차트에서 강한 흐름을 보이고 있다.",
        "headline": "봄 시즌 청량 콘셉트 수요 급증",
        "id": "news-w5-0",
        "type": "trend",
        "week": 5,
      },
    ],
    "promotionResults": [],
    "season": "spring",
    "statChanges": [],
    "warnings": [],
    "week": 5,
  },
}
`;

exports[`processWeek 골든 스냅샷 > 투자사 마감 주간(VC 13주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "summer",
      "kpopNews": [
        {
          "detail": "방송과 숏폼 노출 경쟁이 예상보다 빨라질 것으로 보인다.",
          "headline": "대형 기획사 루키 그룹, 다음 달 데뷔 예고",
          "id": "news-w13-0",
          "type": "competitor",
          "week": 13,
        },
      ],
      "marketTrend": {
        "coldGenre": "ballad",
        "coldMood": "dreamy",
        "hotGenre": "edm",
        "hotMood": "powerful",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 2,
      "industry": 20,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 13,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 13,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "summer",
      "currentWeek": 14,
      "currentYear": 1,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "investorComplianceCount": 0,
      "investorConditionProgress": {
        "summit-quarterly": {
          "firstFailedWeek": 13,
          "penaltyApplied": false,
        },
      },
      "investorConditions": [
        {
          "deadlineWeeks": 13,
          "description": "분기마다 수익 보고서 제출 및 흑자 전환 경향 증명",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": "분기 보고 흑자 전환 추세",
        },
        {
          "deadlineWeeks": 104,
          "description": "2년 안에 초기 투자금 회수 수준의 누적 성과 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": "2년 내 투자금 회수",
        },
      ],
      "investorPenaltyActive": true,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "notifications": [
        {
          "id": "noti-w13-0",
          "message": "투자사 조건 미달: 분기마다 수익 보고서 제출 및 흑자 전환 경향 증명 — 4주 안에 회복하지 못하면 페널티가 적용됩니다.",
          "title": "주간 알림",
          "type": "warning",
          "week": 13,
        },
      ],
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [
        {
          "category": "위기",
          "id": "emergency-investor",
          "options": [
            {
              "description": "투자사 요구에 따라 상업 활동을 늘린다.",
              "effects": {
                "fandomDisappointment": 5,
                "money": 20000000,
                "satisfaction": -4,
                "stress": 5,
              },
              "id": "comply",
              "label": "요구 수용",
              "tradeoff": "투자사 관계는 회복되지만 팬 실망과 피로가 누적된다.",
            },
            {
              "description": "기한 연장이나 조건 완화를 설득한다.",
              "effects": {
                "industry": -2,
                "satisfaction": 2,
              },
              "id": "negotiate",
              "label": "협상 시도",
              "tradeoff": "성공 시 여유가 생기지만 실패 시 관계가 악화된다.",
            },
            {
              "description": "음악적 방향성을 우선하고 투자사와 마찰을 감수한다.",
              "effects": {
                "fandomLoyalty": 3,
                "industry": -3,
                "money": -15000000,
                "satisfaction": 5,
              },
              "id": "defy",
              "label": "자체 방침 고수",
              "tradeoff": "팀 만족도는 오르지만 투자 지원이 줄어들 수 있다.",
            },
          ],
          "summary": "투자사가 실적 미달을 이유로 개입하려 한다.",
          "title": "투자사 조건 압박",
        },
        {
          "category": "훈련",
          "id": "training-focus",
          "options": [
            {
              "description": "보컬 실력과 녹음 안정성을 끌어올린다.",
              "effects": {
                "dance": -2,
                "stress": 4,
                "vocal": 5,
              },
              "id": "vocals",
              "label": "보컬 집중 훈련",
              "tradeoff": "스트레스가 오르고 댄스 성장이 느려진다.",
            },
            {
              "description": "무대 포메이션과 팀 호흡을 다진다.",
              "effects": {
                "chemistry": 3,
                "condition": -2,
                "dance": 5,
              },
              "id": "dance",
              "label": "안무 합동 연습",
              "tradeoff": "보컬 체력과 회복 시간이 줄어든다.",
            },
            {
              "description": "컨디션과 번아웃 관리를 우선한다.",
              "effects": {
                "condition": 7,
                "public": -1,
                "stress": -5,
              },
              "id": "rest",
              "label": "컨디션 회복 주간",
              "tradeoff": "실력 성장과 화제성이 모두 느려진다.",
            },
          ],
          "summary": "제한된 연습 에너지를 어디에 집중할지 결정한다.",
          "title": "이번 주 훈련 방향",
        },
        {
          "category": "스케줄",
          "id": "member-schedule",
          "options": [
            {
              "description": "해당 멤버의 캐릭터성으로 화제성을 노린다.",
              "effects": {
                "chemistry": -2,
                "condition": -1,
                "public": 5,
              },
              "id": "variety",
              "label": "예능 출연",
              "tradeoff": "해당 멤버는 팀 연습에 참여하지 못한다.",
            },
            {
              "description": "그룹 중심으로 팀 리듬을 지킨다.",
              "effects": {
                "chemistry": 4,
                "public": -2,
              },
              "id": "keep-team",
              "label": "팀 연습 유지",
              "tradeoff": "단기 노출 기회를 놓친다.",
            },
            {
              "description": "전문 포지션 역량을 집중 강화한다.",
              "effects": {
                "chemistry": -1,
                "dance": 2,
                "money": -6000000,
                "vocal": 2,
              },
              "id": "solo-lesson",
              "label": "개인 레슨",
              "tradeoff": "나머지 멤버들의 지원이 줄어든다.",
            },
          ],
          "summary": "한 멤버에게 이번 주 높은 노출 기회가 들어왔다.",
          "title": "멤버 개별 스케줄 요청",
        },
      ],
    },
    "staff": {
      "staff": [
        {
          "ability": 60,
          "id": "staff-manager",
          "name": "김매니저",
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": null,
    "competitorComebacks": [],
    "conflicts": [],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "방송과 숏폼 노출 경쟁이 예상보다 빨라질 것으로 보인다.",
        "headline": "대형 기획사 루키 그룹, 다음 달 데뷔 예고",
        "id": "news-w13-0",
        "type": "competitor",
        "week": 13,
      },
    ],
    "promotionResults": [],
    "season": "spring",
    "statChanges": [],
    "warnings": [
      "투자사 조건 미달: 분기마다 수익 보고서 제출 및 흑자 전환 경향 증명 — 4주 안에 회복하지 못하면 페널티가 적용됩니다.",
    ],
    "week": 13,
  },
}
`;
